--- a/Projects/mobilele/src/main/resources/templates/fragments/navbar.html
+++ b/Projects/mobilele/src/main/resources/templates/fragments/navbar.html
@@ -41,16 +41,16 @@
                         <a class="dropdown-item" href="/">Something else here</a>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" th:if="${@currentUser.isLoggedIn()}">
                     <div class="form-inline my-2 my-lg-0 border px-3">
                         <div class="logged-user"
                              text="Welcome, Gosho"></div>
-                        <a class="nav-link" href="/users/logout">Logout</a>
+                        <a class="nav-link" th:href="@{/users/logout}">Logout</a>
                     </div>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="/users/register">Register</a>
+                <li class="nav-item" th:if="${@currentUser.isAnonymous()}">
+                    <a class="nav-link" th:href="@{/users/register}">Register</a>
                 </li>
                 <li class="nav-item" th:if="${@currentUser.isAnonymous()}" >
                     <a class="nav-link" th:href="@{/users/login}">Login</a>
