--- a/Projects/mobilele/src/main/resources/templates/auth-register.html
+++ b/Projects/mobilele/src/main/resources/templates/auth-register.html
@@ -59,9 +59,10 @@
                        type="text"
                        class="form-control"
                        placeholder="Email"/>
-                <p class="invalid-feedback errors alert alert-danger">
-                    Email is required and should be valid.
-                </p>
+                <div class="invalid-feedback errors alert alert-danger">
+                    <div th:each="err: ${#fields.errors('email')}"
+                    th:text="${err}"/>
+                </div>
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label for="password" class="text-white font-weight-bold">Password</label>
@@ -78,9 +79,13 @@
         </div>
         <div class="form-group">
             <label for="confirmPassword" class="text-white font-weight-bold">Password</label>
-            <input id="confirmPassword" name="confirmPassword" type="password" min="2" max="20" class="form-control"
-                   placeholder="Password"/>
-            <p class="errors alert alert-danger">
+            <input id="confirmPassword"
+                   th:field="*{confirmPassword}"
+                   th:errorclass="is-invalid"
+                   type="password"
+                   class="form-control"
+                   placeholder="Repeat Password"/>
+            <p class="invalid-feedback errors alert alert-danger">
                 Password should match.
             </p>
         </div>
