--- a/Projects/mobilele/src/main/resources/templates/offer-add.html
+++ b/Projects/mobilele/src/main/resources/templates/offer-add.html
@@ -25,14 +25,24 @@
         <div class="row">
 
             <div class="form-group col-md-6 mb-3">
-                <label class="text-center text-white font-weight-bold" for="model">Model</label>
-                <select id="model" class="form-control">
+                <label class="text-center text-white font-weight-bold" for="modelId">Model</label>
+                <select id="modelId"
+                        name="modelId"
+                        th:errorclass="is-invalid"
+                        class="form-control">
                     <option value="">- Select a model -</option>
-                    <optgroup label="Brand name">
-                        <option>Model</option>
+                    <optgroup
+                            th:each="brand : ${brands}"
+                            th:label="${brand.name}">
+                        <option
+                            th:each="model : ${brand.models}"
+                            th:text="${model.name}"
+                            th:value="${model.id}"
+                            th:selected="*{modelId} == ${model.id}"
+                        >Model</option>
                     </optgroup>
                 </select>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Vechicle model is required.
                 </p>
             </div>
