--- a/Projects/pathfinder/src/main/resources/templates/register.html
+++ b/Projects/pathfinder/src/main/resources/templates/register.html
@@ -13,20 +13,21 @@
     <div class="d-flex justify-content-center ">
         <div class="row g-3">
             <form
-                    action="/"
-                    method="">
+                    th:action="@{/register}"
+                    th:method="post"
+                    th:object="${userRegistrationDTO}" >
                 <div>
                     <div class="col-auto">
                         <label for="inputUsername" class="col-form-label ">Username</label>
                     </div>
                     <div class="col-auto">
                         <input name="username"
-                               
+                               th:field="*{username}"
                                required minlength="5" maxlength="20"
                                type="text"
                                id="inputUsername"
                                class="form-control"
-                               aria-describedby="usernameHelpInline">
+                               aria-describedby="usernameHelpInline" >
                         <small id="usernameError"
                                class="invalid-feedback bg-danger rounded">Username length must be more than 3 characters</small>
 
