--- a/Projects/pathfinder/src/main/resources/templates/register.html
+++ b/Projects/pathfinder/src/main/resources/templates/register.html
@@ -23,14 +23,14 @@
                     <div class="col-auto">
                         <input name="username"
                                th:field="*{username}"
+                               th:errorclass="is-invalid"
                                required minlength="5" maxlength="20"
                                type="text"
                                id="inputUsername"
                                class="form-control"
-                               aria-describedby="usernameHelpInline" >
+                               aria-describedby="usernameHelpInline" />
                         <small id="usernameError"
                                class="invalid-feedback bg-danger rounded">Username length must be more than 3 characters</small>
-
                         <small id="usernameUniqueError"
                                class=" bg-danger rounded">Username is already occupied</small>
 
@@ -43,6 +43,8 @@
                     </div>
                     <div class="col-auto">
                         <input name="fullname"
+                               th:field="*{fullname}"
+                               th:errorclass="is-invalid"
                                required minlength="5" maxlength="20"
                                type="text"
                                id="inputFullName"
@@ -50,6 +52,7 @@
                                aria-describedby="fullNameHelpInline">
                         <small id="fullNameError"
                                class="invalid-feedback  form-text bg-danger rounded">Full name length must be more than 3 characters</small>
+
                     </div>
                 </div>
 
@@ -59,6 +62,7 @@
                     </div>
                     <div class="col-auto">
                         <input name="email"
+                               th:field="*{email}"
 								required
                                type="email"
                                id="inputEmail"
@@ -73,7 +77,9 @@
                         <label for="inputAge" class="col-form-label ">Age</label>
                     </div>
                     <div class="col-auto">
-                        <input name="age" required
+                        <input name="age"
+                               th:field="*{age}"
+                               required
                                type="number"
                                id="inputAge"
                                class="form-control"
@@ -89,6 +95,7 @@
                     </div>
                     <div class="col-auto">
                         <input name="password"
+                               th:field="*{password}"
                                 required minlength="5" maxlength="20"
                                type="password"
                                id="inputPassword"
@@ -107,6 +114,7 @@
                     </div>
                     <div class="col-auto">
                         <input name="confirmPassword"
+                               th:field="*{confirmPassword}"
                                 required minlength="5" maxlength="20"
                                type="password"
                                id="inputConfirmPassword"
