--- a/Projects/battleships/src/main/resources/templates/login.html
+++ b/Projects/battleships/src/main/resources/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -43,10 +44,12 @@
             <div class="col-md-6">
                 <div class="container bg-blur rounded p-5 mt-5 w-75 ">
 
-                    <form  action="/" method=""
+                    <form  th:action="@{/login}"
+                           th:method="post"
+                           th:object="${loginDTO}"
                           class="text-center text-light">
                         <h3 class="mt-5 text-center">
-                            <strong class="rounded  pl-3 text-danger">Enter valid
+                            <strong th:if="${badCredentials}" class="rounded  pl-3 text-danger">Enter valid
                                 username and
                                 password</strong>
                         </h3>
@@ -55,10 +58,13 @@
                             <div class="col-sm-10">
                                 <input type="text" class="form-control"
                                        id="username"
-                                       aria-describedby="usernameHelpInline" placeholder="Username">
+                                       aria-describedby="usernameHelpInline"
+                                       placeholder="Username"
+                                       th:field="*{username}"
+                                       th:errorclass="is-invalid">
                                 <small
                                        id="usernameHelpInline"
-                                       class="bg-danger text-light rounded">
+                                       class="invalid-feedback bg-danger text-light rounded">
                                     Username length must be between 3 and 10 characters.
                                 </small>
                             </div>
@@ -69,10 +75,13 @@
                                 <input type="password"
                                        class="form-control"
                                        id="password"
-                                       aria-describedby="passwordHelpInline" placeholder="Password">
+                                       aria-describedby="passwordHelpInline"
+                                       placeholder="Password"
+                                       th:field="*{password}"
+                                       th:errorclass="is-invalid">
                                 <small
                                        id="passwordHelpInline"
-                                       class="bg-danger text-light rounded">
+                                       class="invalid-feedback bg-danger text-light rounded">
                                     Password length must be more than 3 characters.
                                 </small>
                             </div>
