--- a/Projects/battleships/src/main/resources/templates/home.html
+++ b/Projects/battleships/src/main/resources/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -9,31 +10,8 @@
     <link rel="stylesheet" href="/static/style.css"/>
 </head>
 <body class="body-main">
-<header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top rounded">
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home</a>
-                </li>          
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Register</a>
-                    </li>       
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Add Ship</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Logout</a>
-                    </li>
-            </ul>
-            <a class="nav-link" href="/">
-                <img width="50px" src="/images/ufo.png" alt="Ufo image">
-            </a>
-        </div>
-    </nav>
+<header th:include="~{fragments/navigation}">
+
 </header>
 <main role="main">
     <div class="jumbotron">
@@ -42,7 +20,8 @@
             <div class="col-md-6">
                 <div class="card flex-md-row bg-blur mb-4 box-shadow h-md-250">
                     <div class="card-body d-flex flex-column align-items-start">
-                        <strong class="d-inline-block mb-2 text-primary">Attacker</strong>
+                        <strong th:if="${badCredentials}" class="d-inline-block mb-2 text-primary">Attacker</strong>
+                        <span th:text="${@loggedUser.fullName}"></span>
                         <h3 class="mb-0 text-white">
                             Select the attacker
                         </h3>
