--- a/Projects/battleships/src/main/resources/templates/index.html
+++ b/Projects/battleships/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -9,34 +10,14 @@
     <link rel="stylesheet" href="/static/style.css"/>
 </head>
 <body class="body-main">
-<header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top rounded">
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home</a>
-                </li>               
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Register</a>
-                    </li>               
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Add Ship</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Logout</a>
-                    </li>                
-            </ul>
-            <img width="50px" src="/images/ufo.png" alt="Ufo image">
-        </div>
-    </nav>
+<header th:include="fragments/navigation">
+
 </header>
 <main role="main">
     <div class="jumbotron">
         <div class="container text-light text-center">
-            <h1 class="display-3"><strong class="bg-blur rounded">Battleships</strong></h1>
+            <h1 class="display-3">
+                <strong th:if="${badCredentials}" class="bg-blur rounded">Battleships</strong></h1>
         </div>
         <div class="container bg-blur text-white align-items-end rounded mt-5 p-5">
             <div class="row">
