--- a/Projects/battleships/src/main/resources/templates/index.html
+++ b/Projects/battleships/src/main/resources/templates/index.html
@@ -2,12 +2,9 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Battleships Application</title>
-    <link rel="stylesheet" href="/static/reset-css.css"/>
-    <link rel="stylesheet" href="/static/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/static/style.css"/>
+
+    <th:block th:replace="~{fragments/head}" />
 </head>
 <body class="body-main">
 <header th:include="fragments/navigation">
@@ -32,9 +29,7 @@
             </div>
         </div>
     </div>
-    <footer class="container mt-0 text-white">
-        <p>&copy;SoftUni Spring Team 2021. All rights reserved.</p>
-    </footer>
+    <th:block th:replace="~{fragments/footer}" />
 </main>
 </body>
 </html>
