--- a/Projects/battleships/src/main/resources/templates/ship-add.html
+++ b/Projects/battleships/src/main/resources/templates/ship-add.html
@@ -2,12 +2,8 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Battleships Application</title>
-    <link rel="stylesheet" href="/static/reset-css.css"/>
-    <link rel="stylesheet" href="/static/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/static/style.css"/>
+    <th:block th:replace="~{fragments/head}" />
 </head>
 <body class="body-main">
 <header th:include="~{fragments/navigation}">
@@ -105,8 +101,6 @@
         </div>
     </div>
 </main>
-<footer class="container text-white">
-    <p>&copy;SoftUni Spring Team 2021. All rights reserved.</p>
-</footer>
+<th:block th:replace="~{fragments/footer}" />
 </body>
 </html>
