--- a/Projects/battleships/src/main/resources/templates/home.html
+++ b/Projects/battleships/src/main/resources/templates/home.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Battleships Application</title>
-  <th:block th:replace="~{fragments/head}" />
+    <th:block th:replace="~{fragments/head}"></th:block>
 </head>
 <body class="body-main">
-<header th:include="~{fragments/navigation}">
+<header th:include="~{fragments/navigation}"></header>
 
-</header>
 <main role="main">
     <div class="jumbotron">
         <h1 class="text-center p-5 text-white font-weight-bold">Battle</h1>
-        <form action="/" method="" class="row mb-2">
+        <form th:action="@{/battle}"
+              th:method="post"
+              th:object="${startBattleDTO}"
+              class="row mb-2">
             <div class="col-md-6">
                 <div class="card flex-md-row bg-blur mb-4 box-shadow h-md-250">
                     <div class="card-body d-flex flex-column align-items-start">
-                        <strong th:if="${badCredentials}" class="d-inline-block mb-2 text-primary">Attacker</strong>
-                        <span th:text="${@loggedUser.fullName}"></span>
+                        <strong class="d-inline-block mb-2 text-primary">Attacker</strong>
+                        <span class="user-full-name" th:text="${@loggedUser.fullName}"></span>
                         <h3 class="mb-0 text-white">
                             Select the attacker
                         </h3>
                         <div class="mb-1 text-white">Select one of the ships that are owned by the current user</div>
-                        <select class="form-select mt-5" aria-label="Default select example">
-                            <option selected>Select one of the ships that are owned by the current user</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                        <select class="form-select mt-5" aria-label="Default select example" th:field="*{attackerId}">
+                            <option value="0" selected>Select one of the ships that are owned by the current user</option>
+                            <option th:each="ship: ${ownShips}" th:value="${ship.getId()}" th:text="${ship.getName()}" />
                         </select>
                     </div>
                     <img class="card-img-right flex-auto d-none d-md-block" data-src="holder.js/200x250?theme=thumb"
@@ -43,11 +42,9 @@
                             Select the defender
                         </h3>
                         <div class="mb-1 text-white">Select one of the ships that are owned by other users</div>
-                        <select class="form-select mt-5" aria-label="Default select example">
-                            <option selected>Select one of the ships that are owned by other users</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                        <select class="form-select mt-5" aria-label="Default select example" th:field="*{defenderId}">
+                            <option value="0" selected>Select one of the ships that are owned by other users</option>
+                            <option th:each="ship: ${enemyShips}" th:value="${ship.getId()}" th:text="${ship.getName()}" />
                         </select>
                     </div>
                     <img class="card-img-right flex-auto d-none d-md-block" data-src="holder.js/200x250?theme=thumb"
@@ -65,7 +62,12 @@
                     <div class="text-center">
                         <h5>Name -- Health -- Power </h5>
                         <ul>
-                            <li class="font-weight-bold">| Name    | Health    | Power    |</li>
+                            <li class="font-weight-bold" th:each="ship: ${sortedShips}">
+                                | <span th:text="${ship.getName()}" />
+                                | <span th:text="${ship.getHealth()}" />
+                                | <span th:text="${ship.getPower()}" />
+                                |
+                            </li>
                         </ul>
                     </div>
                 </div>
