Create fire logic for ships

--- a/Projects/battleships/src/main/resources/templates/fragments/navigation.html
+++ b/Projects/battleships/src/main/resources/templates/fragments/navigation.html
@@ -19,7 +19,7 @@
                 <a class="nav-link" href="/ships/add">Add Ship</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="/index">Logout</a>
+                <a class="nav-link" href="/logout">Logout</a>
                 </li>
             </th:block>
         </ul>
