--- a/Projects/mobilele/src/main/resources/templates/fragments/navbar.html
+++ b/Projects/mobilele/src/main/resources/templates/fragments/navbar.html
@@ -43,8 +43,9 @@
                 </li>
                 <li class="nav-item" th:if="${@currentUser.isLoggedIn()}">
                     <div class="form-inline my-2 my-lg-0 border px-3">
-                        <div class="logged-user"
-                             text="Welcome, Gosho"></div>
+                        <div class="logged-user">
+                             Welcome, <th:block th:text="${@currentUser.getName()}">Anonymous</th:block>!
+                        </div>
                         <a class="nav-link" th:href="@{/users/logout}">Logout</a>
                     </div>
                 </li>
